kubernetes/traefik/dashboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-ingress
  namespace: traefik
spec:
  entryPoints:
    - websecure
  tls:
    secretName: tls-secret

  routes:
  - match: Host(`traefik.private.antoniocaccamo.work`) && (PathPrefix(`/api`) || PathPrefix(`/dashboard`) || PathPrefix(`/oidc/callback`) )
    kind: Rule
    middlewares:
      - name: traefik-dashboard-oidc
    services:
    - name: api@internal
      kind: TraefikService
